tests/baselines/reference/parserFunctionDeclaration6.errors.txt
parserFunctionDeclaration6.ts(2,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
parserFunctionDeclaration6.ts(3,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
parserFunctionDeclaration6.ts(3,14): error TS2389: Function implementation name must be 'foo'.


==== parserFunctionDeclaration6.ts (3 errors) ====
    {
        function foo();
                 ~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
        function bar() { }
                 ~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
                 ~~~
!!! error TS2389: Function implementation name must be 'foo'.
    }